feature/product-page - правки компонента header

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,7 +6,7 @@
   background-color: white;
   z-index: 999;
 
-  &Wrapper {
+  &__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
