--- a/src/styles/scss.scss
+++ b/src/styles/scss.scss
@@ -55,24 +55,8 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.MenuItem {
-  width: 100%;
-  padding: 0 0.5rem;
-  border-bottom: 1px solid white;
-  cursor: pointer;
-
-  > a {
-    display: flex;
-    align-items: center;
-    height: 50px;
-    text-decoration: none;
-    color: white;
-
-    > span {
-      margin-left: 0.5rem;
-      line-height: 1.5;
-    }
-  }
+ul {
+  list-style: none;
 }
 
 .page {
