--- a/src/components/UI/IconButton/iconButton.scss
+++ b/src/components/UI/IconButton/iconButton.scss
@@ -1,8 +1,12 @@
-.btn_icon {
+.btn__icon {
   padding: 6px;
 
   > span {
     display: block;
+  }
+
+  &-white {
+    background-color: white;
   }
 
   &.active {
