--- a/src/components/SidebarMenu/sidebarMenu.scss
+++ b/src/components/SidebarMenu/sidebarMenu.scss
@@ -1,16 +1,24 @@
 .menu {
+  overflow: hidden;
+
   &__item {
     width: 100%;
-    padding: 0 0.5rem;
-    border-bottom: 1px solid white;
     cursor: pointer;
+
 
     > a {
       display: flex;
       align-items: center;
       height: 50px;
+      padding: 0 15px;
       text-decoration: none;
       color: white;
+
+      &.active {
+        background-color: #edeeee;
+        color: black;
+      }
+
 
       > span {
         margin-left: 0.5rem;
