--- a/src/components/UI/Avatar/Avatar.scss
+++ b/src/components/UI/Avatar/Avatar.scss
@@ -6,13 +6,19 @@
   font-weight: 500;
   box-shadow: 0px 5px 16px 0px rgb(0 0 0 / 18%);
 
+  & img {
+    width: 100%;
+    overflow: hidden;
+  }
+
   &-small {
     width: 40px;
     max-width: 40px;
     height: 40px;
   }
 
-  &-circle {
+  &-circle,
+  &-circle img {
     border-radius: 50%;
   }
 
