--- a/src/components/UI/Input/Input.scss
+++ b/src/components/UI/Input/Input.scss
@@ -1,5 +1,9 @@
 .input {
 
+  &__box {
+    width: 100%;
+  }
+
   &__label {
     color: #737476;
     margin-bottom: 8px;
@@ -27,14 +31,14 @@
 
     & .input {
       width: 100%;
-      height: calc(100% - 2px);
-      padding: 11px 12px;
+      padding: 9px 10px;
       border: 0;
       border-radius: 5px;
       background-color: initial;
       color: #242629;
-      font-family: SeroPro,sans-serif;
-      font-size: 16px;
+      font-family: SeroPro, sans-serif;
+      font-size: 14px;
+      line-height: 1;
       letter-spacing: normal;
       outline: none;
     }
@@ -54,6 +58,7 @@
     font-weight: 500;
     line-height: normal;
     white-space: nowrap;
+    cursor: pointer;
   }
 
   &[disabled] {
