--- a/src/styles/scss.scss
+++ b/src/styles/scss.scss
@@ -26,18 +26,35 @@ body {
 
 .profile {
   display: flex;
-}
 
-.profile-img {
-  width: 40px;
-  height: 40px;
-  margin-right: 0.5rem;
-  background-color: black;
-  border-radius: 50%;
-  cursor: pointer;
+  &__vertical {
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+
+    & .profile {
+      &__avatar {
+        margin-bottom: 15px;
+      }
+      &_title {
+        text-align: center;
+        line-height: 1.3;
+        letter-spacing: 3px;
+      }
+    }
+  }
+
+  &__avatar {
+    width: 40px;
+    height: 40px;
+    background-color: black;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 }
 
 .wrapper-page {
+  display: flex;
   flex: 1 0 auto;
 }
 
@@ -47,7 +64,7 @@ body {
 
 .container {
   width: 100%;
-  padding: 0 1rem;
+  padding: 0 15px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -65,6 +82,7 @@ ul {
 }
 
 .page {
+  width: 100%;
   padding: 32px 0;
 }
 
