--- a/src/features/products/components/ProductControl/ProductControl.scss
+++ b/src/features/products/components/ProductControl/ProductControl.scss
@@ -1,5 +1,6 @@
 .card__control {
-  max-width: 100%;
+  max-width: 1000px;
+  width: 100%;
 
   &__title {
     & .input {
@@ -40,10 +41,12 @@
     width: 100%;
     max-width: 400px;
     min-width: 250px;
+    max-height: 300px;
     background-color: white;
 
     & img {
-      width: 100%;
+      height: 100%;
+      margin: 0 auto;
     }
   }
 }
